--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Super Corn Project Poster</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://github.com/cammysoh/Cluster-Super-Corn/raw/master/Super%20Corn%20Project%20Poster.jpg&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
