--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Super Corn Project Poster</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/cammysoh/Cluster-Super-Corn/raw/master/Super%20Corn%20Project%20Poster.jpg&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/cammysoh/Cluster-Super-Corn/raw/master/Super%20Corn%20Project%20Poster.pptx&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
